--- a/escom-bpm-web/src/main/webapp/view/folders/folder-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/folders/folder-card.xhtml
@@ -52,12 +52,14 @@
         <p:tab title="#{bundle.AutoFillDocuments}">
             <p:panelGrid id="gridAutoFill" columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">
 
-                <p:outputLabel value="#{bundle.Company}:"/>
-                <p:inputSwitch value="#{_bean.editedItem.inheritCompany}" showLabels="true" onLabel="#{bundle.Inherit}" offLabel="#{bundle.Select}" disabled="#{_bean.isReadOnly()}">
+                <p:outputLabel value="#{bundle.Company}:" rendered="#{applicationBean.isCanUsesStaffs()}"/>
+                <p:inputSwitch value="#{_bean.editedItem.inheritCompany}" 
+                               rendered="#{applicationBean.isCanUsesStaffs()}"
+                               showLabels="true" onLabel="#{bundle.Inherit}" offLabel="#{bundle.Select}" disabled="#{_bean.isReadOnly()}">
                     <p:ajax oncomplete="itemChange = 1;" update="сompanyPanel"/>
                 </p:inputSwitch>
                 
-                <h:panelGroup id="сompanyPanel" styleClass="ui-grid-col-12">
+                <h:panelGroup id="сompanyPanel" styleClass="ui-grid-col-12" rendered="#{applicationBean.isCanUsesStaffs()}">
                     <p:selectOneMenu value="#{_bean.editedItem.companyDefault}" id="company" converter="companyConvertor"
                                      rendered="#{!_bean.editedItem.inheritCompany}"
                                      disabled="#{_bean.isReadOnly() or _bean.editedItem.inheritCompany}"
@@ -93,12 +95,14 @@
                     </ui:include>
                 </h:panelGroup>
 
-                <p:outputLabel value="#{bundle.Partner}:"/>
-                <p:inputSwitch value="#{_bean.editedItem.inheritPartner}" onLabel="#{bundle.Inherit}" offLabel="#{bundle.Select}" disabled="#{_bean.isReadOnly()}">
+                <p:outputLabel value="#{bundle.Partner}:" rendered="#{applicationBean.isCanUsesPartners()}"/>
+                <p:inputSwitch value="#{_bean.editedItem.inheritPartner}" 
+                               rendered="#{applicationBean.isCanUsesPartners()}"
+                               onLabel="#{bundle.Inherit}" offLabel="#{bundle.Select}" disabled="#{_bean.isReadOnly()}">
                     <p:ajax oncomplete="itemChange = 1;" update="panelPartner"/>
                 </p:inputSwitch>
                 
-                <h:panelGroup id="panelPartner" styleClass="ui-grid-col-12" >
+                <h:panelGroup id="panelPartner" styleClass="ui-grid-col-12" rendered="#{applicationBean.isCanUsesPartners()}">
                     <ui:include src="/view/common/item-select-list-btn.xhtml" >
                         <ui:param name="_itemValue" value="#{_bean.editedItem.partnerDefault}"/>
                         <ui:param name="_itemLabel" value="nameEndElipse"/>
