--- a/escom-bpm-web/src/main/webapp/view/docs/reports/count-types.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/reports/count-types.xhtml
@@ -13,7 +13,7 @@
     <ui:define name="toolbarComponents" >
         <p:commandButton value="#{bundle.ToForm}" style="padding-top: 2px;"
                          actionListener="#{docReportBean.makeReport()}"
-                         update="reportForm">
+                         update="mainFRM">
             <f:param name="isRequired" value="true"/>
         </p:commandButton>
     </ui:define>
