--- a/escom-bpm-web/src/main/webapp/view/index.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/index.xhtml
@@ -79,7 +79,7 @@
                         <span class="ui-icon ui-icon-grip-dotted-vertical" />
                     </span>
 
-                    <p:commandButton value="#{bundle.CloseSession}" title="#{bundle.ExitProgramm}"
+                    <p:commandButton icon="ico_exit" value="#{bundle.CloseSession}" title="#{bundle.ExitProgramm}"
                                      onstart="return isClose = 1;"                                     
                                      actionListener="#{sessionBean.onSessionExit()}"/>
                 </f:facet>
