--- a/escom-bpm-web/src/main/webapp/view/users/user-settings.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-settings.xhtml
@@ -14,12 +14,7 @@
         </p:menuitem>
     </ui:define>
 
-    <ui:define name="toolbarComponents" >
-        <p:commandButton id="btnMake" icon="ui-icon-circle-check" value="#{bundle.ChangePassword}"
-                         update="mainFRM"
-                         actionListener="#{userSettingsBean.onChangePassword()}">
-            <f:param name="isRequired" value="true"/>
-        </p:commandButton>
+    <ui:define name="toolbarComponents" >        
     </ui:define>
 
     <ui:define name="specToolButtons" >
@@ -38,39 +33,48 @@
                          actionListener="#{userSettingsBean.saveSettings()}"/>
         <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding" dynamic="true">
             <p:tab title="#{bundle.password}">
-                <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" rendered="#{!sessionBean.currentUser.LDAPname.isEmpty()}" styleClass="ui-grid-col-12 col-padding">
-                    <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-panelgrid-blank ui-grid-col-12 without-spaces">
+                <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 col-padding">
+                                    
+                    <p:panelGrid columns="1" rendered="#{!sessionBean.currentUser.LDAPname.isEmpty()}" columnClasses="ui-grid-col-12" styleClass="ui-panelgrid-blank ui-grid-col-12 without-spaces">
                         <p:outputLabel value="#{msg.PasswordSecurityInfo}"/>
                     </p:panelGrid>
-                </p:panelGrid>
+                
+                    <p:panelGrid columns="2" rendered="#{!sessionBean.currentUser.LDAPname.isEmpty()}"
+                                 columnClasses="col-padding"
+                                 styleClass="ui-grid-col-5 ui-panelgrid-blank col-padding">
+                        <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding">
+                            <p:outputLabel value="#{bundle.CurrentPassword}:"/>
+                            <p:password id="curPassword" value="#{userSettingsBean.oldPassword}"
+                                        required="#{param['isRequired'] == 'true'}" requiredMessage="#{bundle.Field} [#{bundle.CurrentPassword}] #{bundle.MustBeFilled}"/>
+                        </p:panelGrid>
 
-                <p:panelGrid columns="2" rendered="#{!sessionBean.currentUser.LDAPname.isEmpty()}"
-                             columnClasses="col-padding"
-                             styleClass="ui-grid-col-5 ui-panelgrid-blank col-padding">
-                    <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding">
-                        <p:outputLabel value="#{bundle.CurrentPassword}:"/>
-                        <p:password id="curPassword" value="#{userSettingsBean.oldPassword}"
-                                    required="#{param['isRequired'] == 'true'}" requiredMessage="#{bundle.Field} [#{bundle.CurrentPassword}] #{bundle.MustBeFilled}"/>
+                        <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding">
+                            <p:outputLabel value="#{bundle.NewPassword}:"/>
+                            <p:password value="#{userSettingsBean.newPassword}" id="newPassword"
+                                        feedback="true" promptLabel="#{bundle.InputNewPassword}"
+                                        goodLabel="#{bundle.Good}" weakLabel="#{bundle.Weak}" strongLabel="#{bundle.Strong}"
+                                        required="#{param['isRequired'] == 'true'}" requiredMessage="#{bundle.Field} [#{bundle.NewPassword}] #{bundle.MustBeFilled}"/>
+
+                            <p:outputLabel value="#{bundle.RepeatPassword}:"/>
+                            <p:password value="#{userSettingsBean.repeatePassword}" id="repeatePassword"
+                                        goodLabel="#{bundle.Good}" weakLabel="#{bundle.Weak}" strongLabel="#{bundle.Strong}"
+                                        required="#{param['isRequired'] == 'true'}" requiredMessage="#{bundle.Field} [#{bundle.RepeatPassword}] #{bundle.MustBeFilled}"/>
+                        </p:panelGrid>                
                     </p:panelGrid>
 
-                    <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-panelgrid-blank ui-grid-col-12 col-padding">
-                        <p:outputLabel value="#{bundle.NewPassword}:"/>
-                        <p:password value="#{userSettingsBean.newPassword}" id="newPassword"
-                                    feedback="true" promptLabel="#{bundle.InputNewPassword}"
-                                    goodLabel="#{bundle.Good}" weakLabel="#{bundle.Weak}" strongLabel="#{bundle.Strong}"
-                                    required="#{param['isRequired'] == 'true'}" requiredMessage="#{bundle.Field} [#{bundle.NewPassword}] #{bundle.MustBeFilled}"/>
-
-                        <p:outputLabel value="#{bundle.RepeatPassword}:"/>
-                        <p:password value="#{userSettingsBean.repeatePassword}" id="repeatePassword"
-                                    goodLabel="#{bundle.Good}" weakLabel="#{bundle.Weak}" strongLabel="#{bundle.Strong}"
-                                    required="#{param['isRequired'] == 'true'}" requiredMessage="#{bundle.Field} [#{bundle.RepeatPassword}] #{bundle.MustBeFilled}"/>
-                    </p:panelGrid>
+                    <p:separator/>
+                    <p:commandButton id="btnMake" icon="ui-icon-circle-check" value="#{bundle.ChangePassword}"
+                            update="mainFRM"
+                            rendered="#{!sessionBean.currentUser.LDAPname.isEmpty()}"
+                            actionListener="#{userSettingsBean.onChangePassword()}">
+                        <f:param name="isRequired" value="true"/>
+                    </p:commandButton>
+                    
+                    <p:outputPanel style="width: 400px; height: 200px;" rendered="#{sessionBean.currentUser.LDAPname.isEmpty()}">
+                        <br/>
+                        <h3>#{msg.UsedLDAPauth}</h3>
+                    </p:outputPanel>
                 </p:panelGrid>
-
-                <p:outputPanel style="width: 400px; height: 200px;" rendered="#{sessionBean.currentUser.LDAPname.isEmpty()}">
-                    <br/>
-                    <h3>#{msg.UsedLDAPauth}</h3>
-                </p:outputPanel>
             </p:tab>
             
             <p:tab title="#{bundle.Other}">
