--- a/escom-bpm-web/src/main/webapp/view/errors/expire.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/errors/expire.xhtml
@@ -15,7 +15,7 @@
         <h:form >
             <p:panel styleClass="panelLogin">
                 <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-12">
-                    <p:graphicImage name="/images/escom_logo.jpg"  />
+                    <p:graphicImage name="/images/session_expired.jpg"  />
                     <h:panelGroup style="width: 100%;">
                         <h3>
                             <h:outputText value="#{msg.SessionTimeout}"></h:outputText> 
