--- a/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
@@ -111,10 +111,13 @@
             <ui:insert name="form_scripts"/>
 
             <ui:include src="/view/common/confirm-dlg.xhtml"/>
+            <ui:include src="/view/common/exeption-handler.xhtml"/>            
+            
             <p:remoteCommand name="formSize" immediate="true" actionListener="#{sessionBean.onFormSize()}" /> 
             <p:remoteCommand name="onChangeItem" immediate="true" actionListener="#{_bean.onItemChange()}" oncomplete="return itemChange = 0;"/> 
         </h:form>
-
+        
+        <ui:include src="/view/common/error-dlg.xhtml"/>
         <ui:include src="/view/sys/noSaveDlg.xhtml" />
 
     </ui:define>
